# KHOps

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt
configs/: default.yaml  dev.yaml  prod.yaml
data/: khops.db
data/artifacts_dev/runs/run_20260412025946/: run_summary.json
data/artifacts_dev/runs/run_20260412025946/data/eda/: data_load_eda.json  data_prep_eda.json
data/artifacts_dev/runs/run_20260412025946/data/preprocessed/: data_prep_preprocessed.csv
data/artifacts_dev/runs/run_20260412025946/evaluation/: model_eval_evaluation_metrics.json  model_train_training_metrics.json
data/artifacts_dev/runs/run_20260412025946/logs/: execution_logs.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/: training_pipeline_examples.py
examples/pipelines/: batch_recommendations.yaml  classification_credit_risk.yaml  classification_default.yaml  ensemble_fraud_detection.yaml  regression_house_prices.yaml  sample_pipeline.yaml
khops/: __init__.py
khops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
khops/cli/: main.py  models.py  monitor.py  pipeline.py  projects.py
khops/core/: config.py  logging.py
khops/db/: __init__.py  base.py  session.py
khops/db/models/: __init__.py  metrics.py  model.py  model_promotion.py  pipeline.py  project.py  run.py
khops/observability/: alerts.py  drift.py  metrics.py
khops/pipelines/: __init__.py  dag.py  executor.py  models.py  parser.py  training_builder.py  training_steps.py
khops/sdk/: tracking.py
khops/server/: app.py  dependencies.py  serving_app.py
khops/server/routes/: health.py  metrics.py  models.py  observability.py  pipelines.py  projects.py  registry.py  runs.py  serving.py
khops/server/schemas/: __init__.py  base.py  metrics.py  model.py  model_promotion.py  pipeline.py  project.py  run.py  serving.py
khops/server/services/: __init__.py  base_service.py  execution_service.py  metrics_service.py  model_promotion_service.py  model_service.py  pipeline_service.py  project_service.py  run_service.py  serving_service.py
khops/utils/: artifacts.py
models/: sample_pipeline_random_forest_20260410035352.pkl
notes/: CHANGELOG.md  FIRST_STEPS.md  PHASE2_SUMMARY.md  PHASE3_DEVELOPMENT.md  PHASE4_PLAN.md  PHASE5_COMPLETION.md  PHASE5_PLAN.md  PHASE6_COMPLETE.md  PROJECT_STATUS.md  README.md  SETUP_COMPLETE.md  TRAINING_AND_SERVING_GUIDE.md
scripts/: seed_db.py  start_dev.sh
tests/: conftest.py
tests/integration/: test_api.py  test_models.py
tests/unit/: test_artifacts.py  test_executor.py  test_parser.py  test_schemas.py  test_services.py
web/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/monitoring/: page.tsx
web/app/pipelines/: page.tsx
web/components/: Header.tsx  Sidebar.tsx  StatusWidget.tsx
web/components/cards/: ClusterSummary.tsx  MetricCard.tsx
web/components/charts/: ResourceUtilizationChart.tsx
web/components/deployments/: DeploymentsTable.tsx
web/components/monitoring/: AlertsPanel.tsx  FeatureDriftChart.tsx  LabelHistogram.tsx  LatencyHistogram.tsx  LiveEventStream.tsx  SummaryCard.tsx
web/components/pipeline/: InspectorPanel.tsx  NodeLibrary.tsx  PipelineCanvas.tsx
web/lib/: api.ts  hooks.ts  monitoring.ts
web/types/: dashboard.ts  monitoring.ts  pipeline.ts
(+1 files in other folders)
